# resume-creator

./: .gitignore  README.md  Taskfile.yml  cv-content.yaml  pyproject.toml
_backup/cv-styles/: convert_all_cvs.py
cv-styles/: CV_COMPARISON.html  CV_STYLES_GUIDE.md  cv_v1_modern_teal.html  cv_v2_editorial.html  cv_v3_tech_dark.html
data/: cv-info.txt
output/: cv_v1_modern_teal.html  cv_v2_editorial.html  cv_v3_tech_dark.html
output/ai-engineer/2026-03-04/html/: cv_v1_modern_teal.html  cv_v2_editorial.html  cv_v3_tech_dark.html
output/archive/html/: cv_v2_editorial.html
output/html/: adeoti-t-applied-ai-engineer-2026.html  adeoti-t-ml-engineer-2026.html  cv_v1_modern_teal.html  cv_v3_tech_dark.html
reference/: cv_v4_modern_teal_single_column.html
src/: build_cv.py  generate_pdf.py  index.html  regenerate_logos.py
src/cv_generator/: __init__.py  cli.py  config.py  fit.py  loader.py  models.py  pdf.py  renderer.py
src/cv_generator/templates/: cv_v1_modern_teal.j2.html  cv_v2_editorial.j2.html  cv_v3_tech_dark.j2.html  cv_v4_modern_teal_single_column.j2.html
templates/: cv_v1_modern_teal.html.j2  cv_v2_editorial.html.j2  cv_v3_tech_dark.html.j2
tests/: test_fit_engine.py  test_loader.py  test_pipeline_e2e.py
