[project]
name = "cv-generator"
version = "0.1.0"
description = "Two-page CV generator from YAML with style templates"
requires-python = ">=3.13"
dependencies = [
  "jinja2>=3.1.6",
  "pypdf>=5.4.0",
  "pyyaml>=6.0.2",
  "weasyprint>=66.0",
]

[project.scripts]
cv-gen = "cv_generator.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_generator"]
